# private-payments-demo

./: .env  .env.example  .gitignore  .prettierignore  .prettierrc  Anchor.toml  Cargo.toml  README.md  eslint.config.js  package.json  tsconfig.json
.github/workflows/: deploy.yml  lint.yml  snyk.yml
app/: .env  craco.config.js  eslint.config.js  package.json  tsconfig.json
app/app/: layout.tsx
app/components/: AddressBook.tsx  Deposit.tsx  Home.tsx  ManageDeposit.tsx  Navbar.tsx  Simple.tsx  SimpleDeposit.tsx  SimpleTransfer.tsx  Tokens.tsx  Transfer.tsx
app/hooks/: use-deposit.ts  use-ephemeral-connection.ts  use-private-rollup-auth.ts  use-program.ts  use-simple-transfer.ts  use-subscription.ts  use-tdx-quote-verification.ts
app/lib/: types.ts  utils.ts
clients/rust/: Cargo.toml
components/: Advanced.tsx  Alert.tsx  DarkModeToggle.tsx  Deposit.tsx  DepositActions.tsx  DepositDialog.tsx  ManageDeposit.tsx  MissingAddressCard.tsx  Navbar.tsx  Simple.tsx  SimpleDeposit.tsx  SimpleRecipient.tsx  SimpleTransfer.tsx  Tokens.tsx  Transfer.tsx  VerificationToast.tsx  Wallet.tsx
contexts/: BlockhashCacheContext.tsx  TokenAccountContext.tsx  TokensContext.tsx
frontend/: README.md  package.json
hooks/: use-ephemeral-connection.ts  use-private-rollup-auth.ts  use-program.ts  use-provider.ts  use-simple-transfer.ts  use-subscription.ts  use-tdx-quote-verification.ts  use-token-account.ts  use-token-accounts.ts  use-tokens.ts
lib/: constants.ts  log.ts  types.ts  utils.ts
programs/private-payments/: Cargo.toml
programs/private-payments/src/: lib.rs
styles/: index.css
tests/: private-payments.ts
views/: advanced.tsx  simple.tsx
(+77 files in other folders)
