[package]
name = "magicblock-permission-client"
description = "A Rust client for the MagicBlock Permission Program"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/magicblock-labs/magicblock-permission-program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]
anchor = []

[dependencies]
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
solana-program = { workspace = true }
thiserror = { workspace = true }

[lints.rust.non_local_definitions]
level = "allow"
